Finished up gallery customization on event pages

--- a/lambda-child/tribe-events/tribe-events.css
+++ b/lambda-child/tribe-events/tribe-events.css
@@ -102,6 +102,11 @@
 	
 }
 
+.tribe-events-content div .list-container {
+  margin-left: -5px;
+  margin-right: -5px;
+}
+
 .tribe-events-title {
   padding-bottom: 12px !important;
   border-bottom: 1px #e8e8e8 solid;
