--- a/lambda-child/style.css
+++ b/lambda-child/style.css
@@ -69,3 +69,12 @@ h4 {
 	color: #b92926;
 	text-decoration: underline !important;
 }
+
+.wp-caption {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.thumbnail {
+  margin-bottom: 10px;
+}
