finished sidebar backend controls

--- a/lambda-child/tribe-events/tribe-events.css
+++ b/lambda-child/tribe-events/tribe-events.css
@@ -49,6 +49,7 @@
 .tribe-events-content .one_third ul {
 	padding-top: 15px;
 	padding-left: 15px;
+	list-style-type: none;
 }
 
 .tribe-events-content .one_third .btn-primary, .tribe-events-secondary-bar .btn-primary {
