--- a/lambda-child/tribe-events/tribe-events.css
+++ b/lambda-child/tribe-events/tribe-events.css
@@ -198,6 +198,11 @@
 	line-height: 20px;
 }
 
+.tribe-events-tooltip {
+	padding: 12px !important;
+	width: 336px !important;
+}
+
 .tribe-events-tooltip-flag {
     width: 100px;
     height: 0px;
@@ -207,7 +212,7 @@
     border-bottom: 15px solid #b92926;
     color: white;
     margin-top: 12px;
-    margin-bottom: 12px;
+    margin-bottom: 11px;
     margin-right: 16px;
     float: left;
     display: inline-block;
@@ -222,6 +227,35 @@
 
 .tribe-events-tooltip-flag div span {
   font-size: 1.4em;
+}
+
+.tribe-events-tooltip-thumb {
+	overflow: hidden;
+    height: 120px;
+    width: 120px;
+    float: left;
+    margin-right: 12px;
+}
+
+.tribe-events-tooltip-thumb img {
+    height: 120px;
+    max-width: none;
+}
+
+.tribe-events-tooltip-learnmore {
+    display: inline-block;
+    text-align: center;
+    background-color: #636363;
+    color: #fff;
+    padding: 4px 10px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    transition: all 0.3s ease;
+    font-weight: bold;
+	 text-decoration: none !important;
+	 
+    margin: 0px;
+    width: 180px;
 }
 
 .tribe-events-tooltip-title {
