--- a/lambda-child/tribe-events/tribe-events.css
+++ b/lambda-child/tribe-events/tribe-events.css
@@ -212,10 +212,7 @@
     border-bottom: 15px solid #b92926;
     color: white;
     margin-top: 12px;
-    margin-bottom: 11px;
-    margin-right: 16px;
-    float: left;
-    display: inline-block;
+    font-size: 0.9em;
 }
 
 .tribe-events-tooltip-flag div {
@@ -230,14 +227,12 @@
 }
 
 .tribe-events-tooltip-thumb {
-	overflow: hidden;
-    height: 90px;
-    float: left;
-    margin-right: 12px;
+
 }
 
 .tribe-events-tooltip-thumb img {
-    height: 90px;
+    height: 80px;
+    max-width: none;
 }
 
 .tribe-events-tooltip-learnmore {
@@ -263,6 +258,12 @@
   background-color: transparent;
   padding: 0px;
   font-size: 1.6em;
+  line-height: 16px;
+}
+
+.tribe-event-duration {
+  margin-top: 6px;
+  margin-bottom: 6px;
 }
 
 .tribe-events-day {
