--- a/lambda-child/tribe-events/tribe-events.css
+++ b/lambda-child/tribe-events/tribe-events.css
@@ -13,6 +13,10 @@
   display: none;
 }
 
+.calendar-sidebar {
+  margin-top: 89px;
+}
+
 .tribe-events-page-title {
   text-align: left !important;
   display: inline-block;
@@ -70,10 +74,23 @@
 	width: 125px;
 	cursor: pointer;
 	border: none;
+	color: white !important;
 }
 
 #tribe-events #legend .tribe-events-category-other {
   display: none;
+}
+
+#tribe-events #legend .tribe-events-category-series {
+  background-color: #b92926 !important;
+}
+
+#tribe-events #legend .tribe-events-category-som {
+  background-color: #0b709f !important;
+}
+
+#tribe-events #legend .tribe-events-category-sua {
+  background-color: #cac02c !important;
 }
 
 #tribe-events #legend {
@@ -160,7 +177,6 @@
 	padding-right: 0px;
 	padding-top: 15px;
 }
-
 
 .tribe-events-content .one_third .btn-default {
   font-family: 'Roboto', sans-serif;
